tests/ui/pin-ergonomics/borrow-pinned-projection.stderr
error: cannot borrow `pair.0` as mutable because it is pinned
  --> $DIR/borrow-pinned-projection.rs:19:19
   |
LL |         let _pin = &pin mut pair.0;
   |                    --------------- pin of `pair.0` occurs here
...
LL |     let _borrow = &mut pair.0;
   |                   ^^^^^^^^^^^ borrow of `pair.0` as mutable occurs here

error: cannot borrow `pair.0` as mutable because it is pinned
  --> $DIR/borrow-pinned-projection.rs:31:19
   |
LL |         let ref pin mut _pin = pair.0;
   |             ---------------- pin of `pair.0` occurs here
...
LL |     let _borrow = &mut pair.0;
   |                   ^^^^^^^^^^^ borrow of `pair.0` as mutable occurs here

error: cannot move out of `pair.0` because it is pinned
  --> $DIR/borrow-pinned-projection.rs:43:18
   |
LL |         let _pin = &pin mut pair.0;
   |                    --------------- pin of `pair.0` occurs here
...
LL |     let _moved = pair.0;
   |                  ^^^^^^ move out of `pair.0` occurs here

error: cannot move out of `pair.0` because it is pinned
  --> $DIR/borrow-pinned-projection.rs:55:18
   |
LL |         let ref pin mut _pin = pair.0;
   |             ---------------- pin of `pair.0` occurs here
...
LL |     let _moved = pair.0;
   |                  ^^^^^^ move out of `pair.0` occurs here

error: cannot move out of `value.field` because it is pinned
  --> $DIR/borrow-pinned-projection.rs:70:18
   |
LL |         let _ = &pin mut value;
   |                 -------------- pin of `value` occurs here
...
LL |     let _moved = value.field;
   |                  ^^^^^^^^^^^ move out of `value.field` occurs here

error: cannot move out of `value.field` because it is pinned
  --> $DIR/borrow-pinned-projection.rs:79:18
   |
LL |         let ref pin mut _pin = value;
   |             ---------------- pin of `value` occurs here
...
LL |     let _moved = value.field;
   |                  ^^^^^^^^^^^ move out of `value.field` occurs here

error: cannot borrow `value.field` as mutable because it is pinned
  --> $DIR/borrow-pinned-projection.rs:88:13
   |
LL |         let _ = &pin mut value;
   |                 -------------- pin of `value` occurs here
...
LL |     let _ = &mut value.field;
   |             ^^^^^^^^^^^^^^^^ borrow of `value.field` as mutable occurs here

error: cannot borrow `value.field` as mutable because it is pinned
  --> $DIR/borrow-pinned-projection.rs:97:13
   |
LL |         let ref pin mut _pin = value;
   |             ---------------- pin of `value` occurs here
...
LL |     let _ = &mut value.field;
   |             ^^^^^^^^^^^^^^^^ borrow of `value.field` as mutable occurs here

error: aborting due to 8 previous errors

